--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gemhelper"
+name = "fifteen-puzzle-helper"
 version = "0.1.0"
 authors = ["dwuggh <dwuggh@gmail.com>"]
 edition = "2018"
@@ -7,9 +7,9 @@ edition = "2018"
 description = "solver and scramble generator for 15-puzzle"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-# [[bin]]
-# name = "gemhelper"
-# path = "src/main.rs"
+[[bin]]
+name = "fifteen-puzzle-helper"
+path = "src/main.rs"
 
 [dependencies]
 rand = "0.7.3"
